--- a/source/blog/index.cshtml
+++ b/source/blog/index.cshtml
@@ -1,6 +1,6 @@
 @{
     Layout = "default";
-    Title = "FsBlog";
+    Title = "David Podhola - F# developer with sales and marketing";
     Description = "A blog aware static site generator in mostly F#";
 }
 @using System.Linq
