--- a/content/layouts/default.cshtml
+++ b/content/layouts/default.cshtml
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>FsBlog</title>
+    <title>David Podhola - F# developer with sales and marketing skills</title>
     <link rel="stylesheet" href="@Model.Root/stylesheets/styles.css">
     <link rel="stylesheet" href="@Model.Root/stylesheets/pygment_trac.css">
     <link rel="shortcut icon" href="@Model.Root/favicon.png">
@@ -31,14 +31,18 @@
   <body>
   	<div class="wrapper">
 	  <header>
-	  	  <a href="@Model.Root/index.html" class="falseheader">FsBlog</a>
-        <p>Blog aware, static site generation using F#.</p>
+	  	  <a href="@Model.Root/index.html" class="falseheader">David Podhola</a>
+        <p>F# developer with sales and marketing skills</p>
 
-        <p class="view"><a href="https://github.com/fsprojects/FsBlog">View the Project on GitHub</a></p>
+        <p class="view">
+			<a target="_blank" href="http://1drv.ms/1PkMC0r">Resume</a>&nbsp;|&nbsp;<a href="tel:+15594811141">+1 (559) 481-1141</a>
+			&nbsp;|&nbsp;			
+			<a target="_blank" href="http://www.google.com/recaptcha/mailhide/d?k=01n4iwS7PDVly2tScfUHUvaQ==&amp;c=oTRpUp6JLQlt8ghgnSxa7P8TJADZk6XtqobNlgPnD5M=" onclick="window.open(http://www.google.com/recaptcha/mailhide/d?k\07501n4iwS7PDVly2tScfUHUvaQ\75\75\46c\75oTRpUp6JLQlt8ghgnSxa7P8TJADZk6XtqobNlgPnD5M\075', '_blank', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">d..&#64;p...net</a>
+		</p>
         <ul>
-          <li><a href="https://github.com/fsprojects/FsBlog">View On <strong>GitHub</strong></a></li>
-          <li><a href="https://github.com/fsprojects/FsBlog/issues">Report a <strong>Bug</strong></a></li>
-          <li><a href="https://github.com/fsprojects/FsBlog/issues/milestones">Check <strong>Progress</strong></a></li>
+          <li><a target="_blank" href="https://careers.stackoverflow.com/davidpodhola"><strong>SO</strong> careers</a></li>
+          <li><a target="_blank" href="https://www.linkedin.com/in/davidpodhola"><strong>LinkedIn</strong> profile</a></li>
+          <li><a target="_blank" href="https://twitter.com/FakeCRM"><strong>Twitter</strong> feed</a></li>
         </ul>
         <h2>Recent posts</h2>
         @foreach (var post in Enumerable.Take(Model.Posts, 5))
@@ -51,7 +55,6 @@
 		    @RenderBody()
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://twitter.com/mattdrivendev">MattDrivenDev</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
   	</div>
