--- a/source/index.cshtml
+++ b/source/index.cshtml
@@ -1,29 +1,25 @@
 @{
     Layout = "default";
-    Title = "FsBlog";
+    Title = "David Podhola - F# developer with sales and marketing skills";
     Description = "A blog aware static site generator in mostly F#";
 }
 
-<h1>Hello, FsBlog!</h1>
+<h1>David Podhola</h1>
 
-<p><strong>FsBlog</strong> aims to be a blog-aware static site generator, mostly built in <code>F#</code> for .NET and Mono developers. But don't worry, you won't even need to know any F# to get up and running. So long as you are comfortable using a command line or terminal, and have a degree of familiarity with Markdown and Razor syntax - you're already most of the way there!</p>
+<p>I love to code and develop application. Have been doing it in BASIC and Pascal since 1986 for fun, professionally since 1994.</p>
 
-<p>Inpired by the likes of <strong>Jekyll</strong> and <strong>Octopress</strong> - and greatly helped along the way by the scripts behind <a href="https://twitter.com/tomaspetricek">@@tomaspetricek</a>'s personal website; FsBlog gives the average .NET or Mono dev the tools that they need to get a statically built website up and running quickly and hosted somewhere like <a href="http://pages.github.com/">Github Pages</a>.</p>
-
-<p>This set of tools have been pulled together using some of the following community projects:</p>
-
+<p>
+I strongly believe in:
 <ul>
-<li><a href="http://fsharp.github.io/FAKE/">FAKE</a> for automation and scripting of the different tasks.</li>
-<li><a href="http://tpetricek.github.io/FSharp.Formatting/">F# Formatting</a> for Markdown and F# literate programming, processing and colorization.</li>
-<li><a href="https://github.com/Antaris/RazorEngine">RazorEngine</a> which is used for the templating and embedded <code>C#</code> code.</li>
-<li>Some of the code in <strong>FsBlogLib</strong> that calls the <strong>RazorEngine</strong> has been based on F# code in <a href="https://github.com/aktowns/tilde">Tilde</a>.</li>
-<li><a href="http://pages.github.com/">Github Pages</a> for our default theme.</li>
-</ul>
-
-<h2>Development</h2>
-
-<p>It is very early days and we haven't yet reached anything vaguely resembling a version 1.0 of the software.</p>
-
-<p>You can track the progress of the development, outstanding issues and check what we're working towards by checking out the <a href="https://github.com/fsprojects/FsBlog/issues/milestones">Issues and Milestones</a> section of our repository.</p>
-
-<p>If you find a bug, or have a request or whatever - please raise a new issue there! or even better make the change and open a pull request.</p>
+    <li>using the latest technologies</li>
+    <li>testing</li>
+    <li>keeping the users and their business needs first</li>
+    <li>understanding the full technology stack I am working with</li>
+    <li>Microsoft changed and is doing great OSS work</li>
+    <li>open-source</li>
+    <li>functional programming</li>
+    <li>usability</li>
+    <li>using native application (e.g. on mobile phones) and synchronizing them if needed</li>
+</ul>	
+</p>
+<p>The best applications are those that are silently helping the users to do their work unnoticed.</p>
