--- a/layouts/default.cshtml
+++ b/layouts/default.cshtml
@@ -42,7 +42,7 @@
         <ul>
           <li><a target="_blank" href="https://careers.stackoverflow.com/davidpodhola"><strong>SO</strong> careers</a></li>
           <li><a target="_blank" href="https://www.linkedin.com/in/davidpodhola"><strong>LinkedIn</strong> profile</a></li>
-          <li><a target="_blank" href="https://www.upwork.com/o/profiles/users/_~01c6ddb46a82164299/"><strong>UpWork</strong> feed</a></li>
+          <li><a target="_blank" href="https://www.upwork.com/o/profiles/users/_~01c6ddb46a82164299/"><strong>UpWork</strong> freelancer</a></li>
         </ul>
         <h2>Recent posts</h2>
         @foreach (var post in Enumerable.Take(Model.Posts, 5))
