talk about the achievements more

--- a/source/index.cshtml
+++ b/source/index.cshtml
@@ -6,10 +6,23 @@
 
 <h1>David Podhola</h1>
 
-<p>I love to code and develop application. Have been doing it in BASIC and Pascal since 1986 for fun, professionally since 1994.</p>
+<ul>
+    <li>co-developed <a href="http://www.ortep.cz/en/dymos.html" target="_blank"><strong>an application to control district heating systems</strong></a> back in '90s</li>
+    <li>programmed <a href="http://www.sprinxcrm.com/" target="_blank"><strong>a CRM system from scratch</strong></a> in the earliest versions of C# and ASP.NET</li>
+    <li>created and promoted synchronization application 
+	<a href="https://gigaom.com/2010/04/06/sync-remember-the-milk-with-outlook/" target="_blank"><strong>GigaOm</strong></a> 
+	and The New York Times Technology News wrote and article about</li>
+    <li>is helping IT companies <a href="https://sync.today" target="_blank"><strong>to synchronize their products</strong></a> with the mainstream contact, calendar and task systems</li>
+</ul>	
+
+<p>
+I understand <strong>both technical and business aspects</strong> of software development. 
+I am happy to talk to <strong>potential customers</strong>. I am able to deliver production code.
+</p>
 
 <p>
 I strongly believe in:
+</p>
 <ul>
     <li>using the latest technologies</li>
     <li>testing</li>
@@ -21,5 +34,3 @@ I strongly believe in:
     <li>usability</li>
     <li>using native application (e.g. on mobile phones) and synchronizing them if needed</li>
 </ul>	
-</p>
-<p>The best applications are those that are silently helping the users to do their work unnoticed.</p>
