--- a/layouts/default.cshtml
+++ b/layouts/default.cshtml
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>David Podhola - F# developer with sales and marketing skills</title>
+    <title>David Podhola - developer with sales and marketing skills</title>
     <link rel="stylesheet" href="@Model.Root/stylesheets/styles.css">
     <link rel="stylesheet" href="@Model.Root/stylesheets/pygment_trac.css">
     <link rel="shortcut icon" href="@Model.Root/favicon.png">
@@ -32,7 +32,7 @@
   	<div class="wrapper">
 	  <header>
 	  	  <p><a href="@Model.Root/index.html" class="falseheader">David Podhola</a></p>
-        <p>.NET (F# and C#) <strong>developer with sales and marketing skills</strong>.<br/>
+        <p>.NET (F# and C#) <strong>developer with sales and marketing skills</strong>. Now with Node.js too.<br/>
 	    I love to design, develop, market and sell applications. Have been doing it in BASIC and Pascal since 1986 for fun, professionally since 1994.</p>
 
         <p class="view">
